static/css/style.css
body {
  /*background-color: #c5e1fb;*/
  background-image: url("rainbowbg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  /*overflow: hidden;*/
}

img {
  height: 100px;
  margin: 20px;
}

button {
  background-color: white;
  border: 4px solid lightblue;
  border-radius: 2px;
}

img.logo {
  height: 100px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(386%, 356%) skew(-4deg, 1deg);
}

img.basket {
  height: 170px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(41%, 222%);

}

.nav {
  /*border: 5px solid hotpink;*/
}

.logoDiv {
  border-radius: 500px 500px 0 0;
  border: 5px solid #244DA9;
  border-bottom: none;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(125, 188, 247, 0.7);
  width: 700px;
}

.wrapper {
  border: 5px solid #244DA9;
  border-radius: 120px 120px 120px 120px;
  background: rgba(125, 188, 247, 0.7);
  /*background: #3597f2;*/
  width: 700px;
  margin-top: -10px;
}

.viewer {
  /*border: 5px solid #65b0f4;*/
  border-radius: 0 0 114px 114px;

}

.prompt {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.error{
  background:
   linear-gradient(
     rgba(255, 0, 0, 0.7),
     rgba(255, 0, 0, 0.7)
   )
}

.board {
  display: flex;
  align-items: center;
  justify-content: center;
}

.disabled {
  opacity: .5;
}

.chainUrl {
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  /*background-color: #ffb2ff;*/
  /*border: 2px solid #ffb2ff;*/
  padding: 20px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.chainPic {
  border: 4px solid lime;
  border-radius: 10px;
  margin-left: 2px;
  margin-right: 2px;
}

.options {
  /*height: 50px;*/
  display: flex;
  align-items: center;
  justify-content: center;
  /*border: 2px solid blue;*/
  padding: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.promptPic {
  /*border: 4px outset transparent;*/
  border-radius: 10px;
  margin-left: 5px;
  margin-right: 5px;
}

.first {
  display: block;
  /*border: 5px solid red;*/
}

 .reward {
   /*border: 4px solid purple;*/
   flex-direction: column;
   display: inline-flex;
   float: right;
 }

 /*.again {
   display: flex;
   align-items: center;
   justify-content: center;
 }*/

 .round-button {
   display: block;
   width: 100px;
   height: 100px;
   border: 2px solid #c5e1fb;
   border-radius: 50%;
   color: #f5f5f5;
   text-align: center;
   text-decoration: none;
   background: #244da9;
   box-shadow: 0 0 3px grey;
   font-size: 20px;
   font-weight: bold;
   font-family: 'Nunito Sans', sans-serif;
}
.round-button:hover {
    background: #0d255a;
}
.basketDiv {
  height: 400px;
  /*border: 4px solid red;*/
}
.level {
  width: 35px;
  height: 35px;
  border: 2px solid #c5e1fb;
  border-radius: 50%;
  color: #f5f5f5;
  text-align: center;
  text-decoration: none;
  background: #244da9;
  box-shadow: 0 0 3px grey;
  font-size: 20px;
  font-weight: bold;
  font-family: 'Nunito Sans', sans-serif;
}

.level:hover {
  background: #C5E1FB;
  color: #244DA9;
  border-color: #244DA9;
}

.sign {
  height: 300px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(256%,88%)}

.app {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(38%, 26%);
  /*not sure if needed*/
  width: 60%;
}

/*.signPost {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(249%, 100%);
}*/

.cloud {
  /*width: 30%;
  height: 30%;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(10%, 10%);*/
}

.againWords {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 20px;
}

.more {
  position: absolute;
  top: 21%;
  left: 25%;
  height: 60px;
}

.basket2 {
  border: 4px solid pink;
  /*display: flex;*/
  /*justify-content: center;
  align-content: center;*/
  margin-top: 4%;
  overflow: scroll;
  width: 80%;
}

/*gear menu*/
.menu {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(1080%,-14%);
}

.otra {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(158%,151%);
}

img.mole {
  height: 200px;
}
/*.mas {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(0%, 0%);
}*/

